[package]
name = "Charon"
version = "0.1.0"
authors = ["Nemin32 <pergerlori@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.104", features=["derive"]}
serde_json = "1.0.48"
regex = "1.3.4"
native-tls = "0.2.3"
lazy_static = "1.4.0"
