[package]
name = "Charon"
version = "0.1.0"
authors = ["Nemin32 <pergerlori@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.104", features=["derive"]}
serde_json = "1.0.48"
regex = "1.3.4"
lazy_static = "1.4.0"

futures = "0.3.4"
hyper = "0.13"
hyper-tls = "0.4.1"
bytes = { version = "0.5", features = ["serde"] }
tokio = { version = "0.2", features = ["full"] }
percent-encoding = "2.1.0"
